fixed notable emerging artists glass card

--- a/index.html
+++ b/index.html
@@ -1295,7 +1295,9 @@
                                     <h2>Notable Emerging Artists</h2>
                                     <h3>Key figures include:</h3> 
                                     <ul>
-                                        <li>Nine Vicious, whose debut album <em>Studio Addict</em> (released in January 2025) showcases a contemporary take on Atlanta rap with experimental sounds. Nettspend, a 17-year-old from Virginia, is making waves with raw energy, having performed at Rolling Loud California in 2024 and working on his first album.</li>
+                                        <li>Nine Vicious, whose debut album <em>Studio Addict</em> (released in January 2025) showcases a contemporary take on Atlanta rap with experimental sounds.</li>
+<br>
+<li> Nettspend, a 17-year-old from Virginia, is making waves with raw energy, having performed at Rolling Loud California in 2024 and working on his first album.</li>
                                         <br>
                                         <li> Pretti Fun is noted for his hyper-pop influenced mixtapes, Pretti and Fun is noted for his hyper-pop influenced mixtapes, <em>Pretti</em> and <em>Fun House</em>, released in 2024, attracting a fresh audience.</li>
                 <br>                            <li>Xaviersobased, from New York City, blends genres like trap, plugg, jerk, and hyperpop, with recent collaborations and performances in 2024.</li>
